update new project

--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
 			<h2>UX WORK</h2>
 			<h4>What I created for users.</h4>
 			<div class="row-index">
-			    <a class="project-block" href="projects/colorwall.html">
-				    <div class="project-small" id="colorwall">
-				    	<img id="img-colorwall" class="project-size" src="projects/colorwall/colorwall-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
+			    <a class="project-block" href="projects/dwb.html">
+				    <div class="project-small" id="dwb">
+				    	<img id="img-dwb" class="project-size" src="projects/dwb/dwb-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
 				    <div class="project-overlay">
-				    	<h3>Colorwall</h3>
+				    	<h3>Draw With Brushy</h3>
 				    	<h4 class="color-white">UI/UX</h4>
 				    </div>
 				    </div>
@@ -190,7 +190,7 @@
 			I am familiar with app and web frontend development, UI design and prototyping. Currently I’m enhancing UX knowledge, as well as design skills.
 			<br><br>
 			I've attended 3 half marathons. I'm optimistic and energetic, I like to accept challenges and share experiences with people. I hope that I can design meaningful solutions for users and make them happy. Thank you for visiting my portfolio :)</p>	
-			<a href="wei_cheng_resume.pdf"><div class="btn-visit" data-aos="zoom-in">VIEW RESUME</div></a>
+			<a href="wei_cheng_resume.pdf" target="_blank"><div class="btn-visit" data-aos="zoom-in">VIEW RESUME</div></a>
 		</div>
 	</div>
 	<div style="clear:both;"></div>
