--- a/projects/dwb.html
+++ b/projects/dwb.html
@@ -21,7 +21,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
-	<title>COLORWALL | WEI CHENG</title>
+	<title>DRAW WITH BRUSHY | WEI CHENG</title>
 </head>
 <body>
 	<div class="drawer">
@@ -41,49 +41,45 @@
 	</header>
 
 	<article class="intro parallax-small intro-artism">
-		<h1>COLORWALL</h1>
+		<h1>DRAW WITH BRUSHY</h1>
 		<p>UI/UX Design</p>
 	</article>
 
 	<div class="wrapper-project" id="wrapper">
 		<div class="row-project">
 			<div class="col-two">
-				<img src="colorwall/colorwall.svg" alt="" class="img-col-two">
+				<img src="dwb/dwb.png" alt="" class="img-col-two">
 			</div>
 			<div class="col-two">
 			<h2>Overview</h2>
-				<p>Colorwall is an educational game that teaches preschool children to learn about how to draw, practice hand-eye coordination movements, and communication through finger drawing on tablet devices.
+				<p>Draw With Brushy is an educational game that teaches preschool children to learn about how to draw, practice hand-eye coordination movements, and communication through finger drawing on tablet devices.
 				</p>
 			</div>
 		</div>
 		<div class="row-thin" data-aos="slide-up" data-aos-once="true">
-			<div class="col-four">
+			<div class="col-three">
 				<h6>Role</h6>
-				<p>UX research <br> UX design</p>
+				<p>UX research / UI UX design</p>
 			</div>
-			<div class="col-four">
-				<h6>Team</h6>
-				<p>Wei Cheng</p>
-			</div>
-			<div class="col-four">
+			<div class="col-three">
 				<h6>Tools</h6>
-				<p>Paper Prototyping / Photoshop /  Sketch / Flinto
+				<p>Paper Prototyping / Photoshop /  Sketch / Invision
 				</p>
 			</div>
-			<div class="col-four">
+			<div class="col-three">
 				<h6>Methods</h6>
-				<p>Interview / Observation / Storyboard / Wireframing 
+				<p>Interview / Observation / Storyboard / Competitive Analysis / Wireframe 
 				</p>
 			</div>
 		</div>
-		<div class="row-project bg-colorwall" data-aos="slide-up" data-aos-once="true">
+		<div class="row-project bg-dwb" data-aos="slide-up" data-aos-once="true">
 			<div class="col-one">
 				<h6>PROCESS</h6>
 				<h5>Design Thinking</h5>
 				<p>
 					The goal for this project is to create an educational technology for children. I didn't set the problem area first because I want to open for opportunities based on observing children in the real world.
 				</p>
-				<img src="colorwall/process.svg" alt="process" class="img-col-one">				
+				<img src="dwb/process.svg" alt="process" class="img-col-one">				
 			</div>
 		</div>
 		<div class="row-project">
@@ -104,7 +100,7 @@
 							<img src="artism/observe-2.svg" alt="" class="img-icon">
 						</div>
 						<div class="col-list">
-							<b>TOUCH TO INTERACT</b><br>Although there're keyboards and mouse specially designed for kids, they still use fingers.
+							<b>TOUCH TO INTERACT</b><br>Although there're keyboards and mouse specially designed for kids, they still prefer using fingers.
 						</div>
 					</div>
 
@@ -113,7 +109,7 @@
 							<img src="artism/observe-3.svg" alt="" class="img-icon">
 						</div>
 						<div class="col-list">
-							<b>LEARN FROM FEEDBACKS</b><br>It's hard for kids to know some meanings of the tools.
+							<b>LEARN FROM FEEDBACKS</b><br>It's hard for kids to know some meanings of the functions, so providing guidance and feedbacks is important.
 						</div>
 					</div>
 				</p>
@@ -122,7 +118,7 @@
 			<img src="artism/observe-1.jpg" alt="observe-1" class="img-col-three-close">					
 			<img src="artism/observe-2.jpg" alt="observe-2" class="img-col-three-close">
 			</div>
-		<div class="row-project bg-colorwall">
+		<div class="row-project bg-dwb">
 			<div class="col-one">
 				<h6>LEARN FROM PEOPLE</h6>
 				<h5>Interview</h5>
@@ -153,7 +149,7 @@
 			<div class="col-one">
 				<h6>COMPETITIVE ANALYSIS</h6>
 				<h5>Creativity, story telling, and tracking progress</h5>				
-				<img src="colorwall/competitive.png" alt="storyboard" class="img-col-one" data-aos="zoom-in" data-aos-once="true">
+				<img src="dwb/competitive.png" alt="competitive" class="img-col-one" data-aos="zoom-in" data-aos-once="true">
 				<p>I found out that each product  has their main focus feature. To create an educational purpose technology, combining the feature of creativity, story telling, and tracking on progress is a good idea and can fill the gaps in current products/methods.</p>
 			</div>
 		</div>
@@ -162,21 +158,30 @@
 			<div>
 				<h6>STORYBOARDING</h6>
 				<h5>The story of user</h5>				
-				<img src="colorwall/storyboard.png" alt="storyboard" class="img-col-one" class="col-one" data-aos="zoom-in" data-aos-once="true">			
+				<img src="dwb/storyboard.png" alt="storyboard" class="img-col-one" class="col-one" data-aos="zoom-in" data-aos-once="true">			
 			</div>
 		</div>	
 
-		<div class="row-full bg-colorwall">
+		<div class="row-full bg-dwb">
 			<div class="col-one">
-				<h5>Personas</h5>
+				<h6>PERSONAS</h6>
+				<h5>Who are the users?</h5>
 				<p>With the data collected from the research, I created two user personas. (click to enlarge the images)</p>
 			</div>
 			<div class="col-two">
-				<img src="colorwall/persona-1.png" alt="persona-1" class="img-col-two hover" onclick="openModal();currentSlide(1)">
+				<img src="dwb/persona-1.png" alt="persona-1" class="img-col-two hover" onclick="openModal();currentSlide(1)">
 			</div>
 			<div class="col-two">	
-				<img src="colorwall/persona-2.png" alt="persona-2" class="img-col-two hover" onclick="openModal();currentSlide(2)">
-			</div>	
+				<img src="dwb/persona-2.png" alt="persona-2" class="img-col-two hover" onclick="openModal();currentSlide(2)">
+			</div>
+		</div>
+		<div class="row-project">
+			<div class="col-one">
+				<h6>USER FLOW</h6>
+				<h5>How do user use it?</h5>
+				<p></p>
+				<img src="dwb/flow.svg" alt="userflow" class="img-col-one">				
+			</div>
 		</div>
 
 		<!-- The Modal/Lightbox -->
@@ -185,12 +190,12 @@
 			<div class="modal-content">
 			    <div class="mySlides">
 			      <div class="numbertext">1 / 2</div>
-			      <img src="colorwall/persona-1.png" class="img-in-lightbox">
+			      <img src="dwb/persona-1.png" class="img-in-lightbox">
 			    </div>
 
 			    <div class="mySlides">
 			      <div class="numbertext">2 / 2</div>
-			      <img src="colorwall/persona-2.png" class="img-in-lightbox">
+			      <img src="dwb/persona-2.png" class="img-in-lightbox">
 			    </div>
 	  		</div>
 		    <!-- Next/previous controls -->
@@ -198,11 +203,18 @@
 		    <a class="next" onclick="plusSlides(1)">&#10095;</a>	  		
 		</div>
 
- 		<div class="row-full">		
+ 		<div class="row-full bg-dwb">		
 			<div class="col-one">
-				<h6>-- THE FINAL DESIGN IS COMING SOON --</h6>
-<!-- 				<h5>User Flow</h5>
-				<img src="colorwall/flow.png" alt="flow" class="img-col-one" data-aos="zoom-in" data-aos-once="true"> -->
+				<h6>WIREFRAME</h6>
+				<h5>The solution draft</h5>
+				<img src="dwb/wireframe.svg" alt="wireframe" class="img-col-one" data-aos="zoom-in" data-aos-once="true">
+			</div>
+		</div>
+ 		
+ 		<div class="row-full">
+			<div class="col-one">
+				<h6>INTERACTIVE PROTOTYPE</h6>
+				<iframe width="972" height="720" src="//invis.io/MSRC6TNZGCB" frameborder="0" allowfullscreen></iframe>
 			</div>
 		</div>
 
