--- a/projects/nsysuhero.html
+++ b/projects/nsysuhero.html
@@ -139,7 +139,7 @@
 			</div>
 		</div> -->
 
-		<a href="art.html">
+		<a href="../art.html">
 			<div class="seemore">
 				<div class="col-three">
 					<h6 class="hcenter">NEXT PROJECT ></h6>
