--- a/projects/dwb.html
+++ b/projects/dwb.html
@@ -175,6 +175,7 @@
 				<img src="dwb/persona-2.png" alt="persona-2" class="img-col-two hover" onclick="openModal();currentSlide(2)">
 			</div>
 		</div>
+
 		<div class="row-project">
 			<div class="col-one">
 				<h6>USER FLOW</h6>
@@ -203,7 +204,7 @@
 		    <a class="next" onclick="plusSlides(1)">&#10095;</a>	  		
 		</div>
 
- 		<div class="row-full bg-dwb">		
+ 		<div class="row-full bg-dwb">
 			<div class="col-one">
 				<h6>WIREFRAME</h6>
 				<h5>The solution draft</h5>
@@ -214,34 +215,9 @@
  		<div class="row-full">
 			<div class="col-one">
 				<h6>INTERACTIVE PROTOTYPE</h6>
-				<iframe width="972" height="720" src="//invis.io/MSRC6TNZGCB" frameborder="0" allowfullscreen></iframe>
+				<iframe width="100%" src="//invis.io/MSRC6TNZGCB" frameborder="0" allowfullscreen></iframe>
 			</div>
 		</div>
-
-<!-- 		<div class="row-full">		
-			<div class="col-one">
-				<h6>HOW DOES COLORWALL WORKS</h6>
-				<h5>User Flow</h5>
-				<img src="colorwall/flow.png" alt="flow" class="img-col-one" data-aos="zoom-in" data-aos-once="true">
-			</div>
-		</div>
-		
-		<div class="row-full bg-colorwall">
-			<h5>Wireframe</h5>
-			<img src="colorwall/lofi.svg" alt="lofi" class="img-col-one">
-		</div>
-
-		<div class="row-full">
-			<h5>Final Product</h5>
-			<img src="colorwall/hifi.png" alt="hifi" class="img-col-one">
-		</div>
-
-		<div class="row-project">
-			<div class="col-one">
-				<h5>Reflection</h5>
-				<p></p>
-			</div>
-		</div> -->
 
 		<a href="designdiary.html">
 			<div class="seemore">
