--- a/projects/dwb.html
+++ b/projects/dwb.html
@@ -215,7 +215,7 @@
  		<div class="row-full">
 			<div class="col-one">
 				<h6>INTERACTIVE PROTOTYPE</h6>
-				<div class="iframe-container"></div>
+				<div class="iframe-container">
 					<iframe width="560" height="315" src="//invis.io/MSRC6TNZGCB" frameborder="0" allowfullscreen></iframe>
 				</div>
 			</div>
