update spending project

--- a/art.html
+++ b/art.html
@@ -37,8 +37,8 @@
 	<header class="header">
 		<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
 		<a href="wei_cheng_resume.pdf" target="_blank" class="a_nav"><span class="btn_nav">RESUME</span></a>
-		<a href="#about" class="a_nav scrollLink"><span class="btn_nav">ABOUT</span></a>
-		<a href="#work" class="a_nav scrollLink"><span class="btn_nav light">WORK</span></a>
+		<a href="index.html#about" class="a_nav"><span class="btn_nav">ABOUT</span></a>
+		<a href="index.html#work" class="a_nav"><span class="btn_nav light">WORK</span></a>
 	</header>
 	
 	<div class="parallax-project" id="intro-art">
