--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
 		</div>
 	</div>
 
-		<div class="section-index" id="work">
-			<h2>UX WORK</h2>
-			<h4>What I created for users.</h4>
+		<div class="section-index-project" id="work">
+			<h2>MY WORK</h2>
+			<h4>Some amazing works I created.</h4>
 			<div class="row-index">
 			    <a class="project-block" href="projects/dwb.html">
 				    <div class="project-small" id="dwb">
@@ -104,6 +104,7 @@
 				    <div class="project-overlay">
 				    	<h3>Draw With Brushy</h3>
 				    	<h4 class="color-white">UI/UX</h4>
+				    	<p>a tablet app for preschool kids to learn and draw through stories</p>
 				    </div>
 				    </div>
 				</a>
@@ -115,24 +116,22 @@
 				    <div class="project-overlay">
 				    	<h3>Design Diary</h3>
 				    	<h4 class="color-white">UX</h4>
+				    	<p>10 medium posts publication about UX research and design</p>
 				    </div>
 				    </div>
 				</a>
 
-			    <a class="project-block" href="projects/sportsbiz.html" target="_blank">
+			    <a class="project-block" href="projects/spending.html" target="_blank">
 				    <div class="project-small" id="sportsbiz">
-				    	<img id="img-sportsbiz" class="project-size" src="projects/sportsbiz/sportsbiz-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
+				    	<img id="img-sportsbiz" class="project-size" src="projects/spending/spending-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
 				    </div>
 				    <div class="project-overlay">
-				    	<h3>Sportsbiz</h3>
-				    	<h4 class="color-white">UI/UX</h4>	
+				    	<h3>Spending Report</h3>
+				    	<h4 class="color-white">Data Visulization</h4>
+				    	<p>Interactive report design of 4 years spending data</p>
 				    </div>
 				</a>
 			</div>
-		</div>
-		<div class="section-index" id="work">
-			<h2>UI WORK</h2>
-			<h4>A little more designs.</h4>	
 			<div class="row-index">
 			    <a class="project-block" href="projects/krtco.html" target="_blank">
 				    <div class="project-small" id="krtco">
@@ -140,10 +139,11 @@
 				    <div class="project-overlay">
 				    	<h3>KRTCO Website</h3>
 				    	<h4 class="color-white">Web Design & Develop</h4>
+				    	<p>UI design and develop for a competition information website</p>
 				    </div>
 				    </div>
 				</a>
-			    <a class="project-block" href="projects/hcx.html" target="_blank">			    
+<!-- 			    <a class="project-block" href="projects/hcx.html" target="_blank">			    
 				    <div class="project-small" id="hcx">
 				    	<img id="img-artism" class="project-size" src="projects/web_hcx/hcx-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
 			    	</div>
@@ -151,13 +151,14 @@
 				    	<h3>HCX Website</h3>
 				    	<h4 class="color-white">Web Design & Develop</h4>
 				    </div>			    	
-				</a>
+				</a> -->
 			    <a class="project-block" href="projects/nsysuhero.html" target="_blank">
 				   	<div class="project-small" id="nsysu">
 				    	<img class="project-size" src="projects/game_nsysuhero/nsysuhero-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
 			    	<div class="project-overlay">
 				    	<h3>NSYSU HERO</h3>
 				    	<h4 class="color-white">Game Design</h4>
+				    	<p>a 2-dimentional Unity game design</p>
 				    </div>
 				    </div>
 			    </a>
@@ -165,8 +166,9 @@
 				   	<div class="project-small">
 				    	<img class="project-size" src="art/art.jpg" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
 				    <div class="project-overlay">
-				    	<h3>ART WORKS</h3>
+				    	<h3>ART</h3>
 				    	<h4 class="color-white">Designs and Illustrations</h4>
+				    	<p>not only UI/UX design</p>
 				    </div>
 				    </div>
 			    </a>		    
