--- a/index.html
+++ b/index.html
@@ -50,21 +50,19 @@
 	<!-- <div class="parallax-100 parallax-index-1"> -->
 	<div class="parallax" id="trans1">
 		<article class="intro">
-			<!-- <img src="img/logo.png" alt="logo" class="logo-mid"> -->
+			<img src="img/Weigif.gif" alt="wei" class="img-intro-gif">
 			<!-- <h1 class="tracking-in-contract">Wei Cheng</h1> -->
-			<h1>Hi, I am Wei Cheng,</h1>
-			<p>
-				<b>a UI/UX Designer who loves to...</b><br>
-			<h1>
-			  <a href="" class="typewrite" data-period="2000" data-type='[ "Understand.", "Make.", "Repeat."]'>
-			    <span class="wrap"></span>
-			  </a>
+			<h1>Wei Cheng, <br>
+			a UI/UX Designer <br>
+			who<br>
+			<a href="" class="typewrite" data-period="2000" data-type='[ "Understands.", "Makes.", "Repeats."]'>
+			<span class="wrap"></span>
+			</a>
 			</h1>			
-			</p><br>
+		</article>
 			<a href="#process" class="scrollLink">
 				<i class="fa fa-chevron-down fa-2x" aria-hidden="true"></i>
 			</a>
-		</article>
 	  <div style="clear:both;"></div>
 	</div>
 	
