update spending report design

--- a/projects/spending.html
+++ b/projects/spending.html
@@ -70,7 +70,7 @@
 			</div>
 		</div>
 
-		<div class="row-project">
+		<div class="row-project bg-spending">
 			<div class="col-one"><h5>Story</h5></div>
 			<div class="col-two">				
 				<img src="spending/luggage.jpg" alt="luggage" class="img-col-two" data-aos="zoom-in" data-aos-once="true">
@@ -84,7 +84,7 @@
 			</div>
 		</div>
 
-		<div class="row-project bg-spending">
+		<div class="row-project">
 			<div class="col-one"><h5>PROCESS</h5></div>
 			<div class="col-img-one">
 				<img src="spending/process.gif" class="img-col-one-80">
@@ -95,7 +95,7 @@
 			</div>
 		</div>
 		
-		<div class="row-full">
+		<div class="row-full bg-spending">
 			<h6>1 - COLLECT</h6>
 			<h5>Wally App</h5>
 			<div class="col-three">
@@ -110,7 +110,7 @@
 				<div class="caption">exported data, with <mark>1998 rows</mark> of data, <mark>9 columns</mark></div>
 			</div>
 		</div>		
-		<div class="row-full bg-spending">
+		<div class="row-full">
 			<h6>2 - VISULIZE</h6>
 			<h5>Tableau Results</h5>
 			<p>I put the excel data into Tableau, and selected 6 features that I want to visualize: category, month, food&drinks, transportation, housing, and aspect.</p>
@@ -127,18 +127,21 @@
 			<div class="col-two">
 				<img src="spending/6-aspect.png" alt="" class="img-col-two"></div>
 		</div>
-		<div class="row-project" data-aos="zoom-in" data-aos-once="true">
+		
+		<div class="row-project bg-spending">
+			<h6>3 - DESIGN</h6>
+			<h5>Interactive Report</h5>
 			<div class="col-one">
-			<h5>Report Design</h5>
-			<p>-- coming soon -- </p>
+				<img src="spending/spendingreport.gif" alt="spendingreport" class="img-col-one">
 			</div>
 		</div>
-<!-- 		<div class="row-project" data-aos="zoom-in" data-aos-once="true">
+
+		<div class="row-project" data-aos="zoom-in" data-aos-once="true">
 			<div class="col-one">
 			<h5>Reflection</h5>
 			<p>In 2014, I was just a freshman of information management and I didn’t know that I’ll have the knowledge about data, information technology, and create designs now. I really enjoy the process looking back to all these thing I had and created, and integrated them into a new project.</p>
 			</div>
-		</div> -->
+		</div>
 
 		<a href="../art.html">
 			<div class="seemore">
