--- a/projects/designdiary.html
+++ b/projects/designdiary.html
@@ -156,16 +156,16 @@
 			</div>
 		</div>
 
-		<a href="sportsbiz.html">
+		<a href="spending.html">
 			<div class="seemore">
 				<div class="col-three">
 					<h6 class="hcenter">NEXT PROJECT ></h6>
 				</div>
 				<div class="col-three">
-					<h2 class="hcenter">Sportsbiz</h2>
+					<h2 class="hcenter">Spending Report</h2>
 				</div>
 				<div class="col-three">
-					<img class="img-col-one" src="sportsbiz/sportsbiz-project.png" alt="">
+					<img class="img-col-one" src="spending/spending-project.png" alt="">
 				</div>
 			</div>
 		</a>
