--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 	<!-- <div class="parallax-100 parallax-index-1"> -->
 	<div class="parallax" id="trans1">
 		<article class="intro">
-			<img src="img/Weigif.gif" alt="wei" class="img-intro-gif">
+			<!-- <img src="img/Weigif.gif" alt="wei" class="img-intro-gif"> -->
 			<!-- <h1 class="tracking-in-contract">Wei Cheng</h1> -->
-			<h1>Wei Cheng, <br>
-			a UI/UX Designer <br>
-			who<br>
+			<h1>Hi, I'm 
+			<span class="name">Wei Cheng</span><br>
+			a UI UX Designer who<br>
 			<a href="" class="typewrite" data-period="2000" data-type='[ "Understands.", "Makes.", "Repeats."]'>
 			<span class="wrap"></span>
 			</a>
