title font size

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<!-- <img src="img/Weigif.gif" alt="wei" class="img-intro-gif"> -->
 			<!-- <h1 class="tracking-in-contract">Wei Cheng</h1> -->
 			<h1>Hi, I'm<br>
-			<span class="name">Wei Cheng</span><br>
+			<span class="name">Wei Cheng,</span><br>
 			a UI UX Designer who<br>
 			<a href="" class="typewrite" data-period="2000" data-type='[ "Understands.", "Makes.", "Repeats."]'>
 			<span class="wrap"></span>
