--- a/projects/spending.html
+++ b/projects/spending.html
@@ -73,7 +73,7 @@
 		<div class="row-project bg-spending">
 			<div class="col-one"><h5>Story</h5></div>
 			<div class="col-two">				
-				<img src="spending/luggage.jpg" alt="luggage" class="img-col-two" data-aos="zoom-in" data-aos-once="true">
+				<img src="spending/luggage.jpg" alt="luggage" class="img-col-two">
 			</div>
 			<div class="col-two">
 				<p>
