update for AI project and index page

--- a/index.html
+++ b/index.html
@@ -48,13 +48,12 @@
 	</header>
 
 	<!-- <div class="parallax-100 parallax-index-1"> -->
-	<div class="parallax" id="trans1">
-		<article class="intro">
+	<div class="parallax section-index" id="trans1">
+		<article class="intro-index">
 			<!-- <img src="img/Weigif.gif" alt="wei" class="img-intro-gif"> -->
 			<!-- <h1 class="tracking-in-contract">Wei Cheng</h1> -->
-			<h1>Hi, I'm<br>
-			<span class="name">Wei Cheng,</span><br>
-			a UI UX Designer who<br>
+			<h1>Hi, I'm Wei Cheng,</span><br>
+			a passionate UI/UX Designer who<br>
 			<a href="" class="typewrite" data-period="2000" data-type='[ "Understands.", "Makes.", "Repeats."]'>
 			<span class="wrap"></span>
 			</a>
@@ -67,7 +66,9 @@
 	</div>
 	
 	<div class="section-index" id="process">
-		<h2>My Design Process</h2>
+		<h2>Design Process</h2>
+		<h4>Applying design thinking methodology to design</h4>
+
 		<div class="card">
 			<img src="img/process-1.png" class="img-col-one"/><br>
 			<p data-aos="flip-left" data-aos-once="true">First, I do research and interview <mark>users</mark>, keep challenging assumptions to define problem space.</p>
@@ -81,9 +82,11 @@
 			<p data-aos="flip-left" data-aos-delay="800" data-aos-once="true">Finally, I repeat and iterate ideas and do usability testing based on learnings from <mark>MAKE</mark> to improve.</p>
 		</div>
 	</div>
-	<div class="row-intro">
+	<div class="section-index-project">
 		<div class="journey">
-			<h2>My Journey to UX</h2>
+			<h2>Journey To UX</h2>
+			<h4>My past experiences</h4>
+
 			<img src="img/journey-1.png" class="img-journey" data-aos="fade-right" data-aos-once="true"/>
 			<img src="img/journey-2.png" class="img-journey" data-aos="fade-right" data-aos-delay="300"data-aos-once="true"/>
 			<img src="img/journey-3.png" class="img-journey"data-aos="fade-right" data-aos-delay="600"data-aos-once="true"/>
@@ -92,87 +95,82 @@
 		</div>
 	</div>
 
-		<div class="section-index-project" id="work">
-			<h2>MY WORK</h2>
-			<h4>Some amazing works I created.</h4>
-			<div class="row-index">
-			    <a class="project-block" href="projects/dwb.html">
-				    <div class="project-small" id="dwb">
-				    	<img id="img-dwb" class="project-size" src="projects/dwb/dwb-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
-				    <div class="project-overlay">
-				    	<h3>Draw With Brushy</h3>
-				    	<h4 class="color-white">UI/UX</h4>
-				    	<p>a tablet app for preschool kids to learn and draw through stories</p>
-				    </div>
-				    </div>
-				</a>
-			</div>
-			<div class="row-index">
-				<a class="project-block" href="projects/designdiary.html" target="_blank">
-				    <div class="project-small" id="designdiary">
-				    	<img class="project-size" src="projects/design_diary/designdiary-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
-				    <div class="project-overlay">
-				    	<h3>Design Diary</h3>
-				    	<h4 class="color-white">UX</h4>
-				    	<p>10 medium posts publication about UX research and design</p>
-				    </div>
-				    </div>
-				</a>
+	<div class="section-index-project" id="work">
+		<h2>Work</h2>
+		<h4>Amazing works I've created</h4>
 
-			    <a class="project-block" href="projects/spending.html" target="_blank">
-				    <div class="project-small" id="sportsbiz">
-				    	<img id="img-sportsbiz" class="project-size" src="projects/spending/spending-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
-				    </div>
-				    <div class="project-overlay">
-				    	<h3>Spending Report</h3>
-				    	<h4 class="color-white">Data Visulization</h4>
-				    	<p>Interactive report design of 4 years spending data</p>
-				    </div>
-				</a>
-			</div>
-			<div class="row-index">
-			    <a class="project-block" href="projects/krtco.html" target="_blank">
-				    <div class="project-small" id="krtco">
-				    	<img id="img-artism" class="project-size" src="projects/web_krtco/krtco-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
-				    <div class="project-overlay">
-				    	<h3>KRTCO Website</h3>
-				    	<h4 class="color-white">Web Design & Develop</h4>
-				    	<p>UI design and develop for a competition information website</p>
-				    </div>
-				    </div>
-				</a>
-<!-- 			    <a class="project-block" href="projects/hcx.html" target="_blank">			    
-				    <div class="project-small" id="hcx">
-				    	<img id="img-artism" class="project-size" src="projects/web_hcx/hcx-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
-			    	</div>
-				    <div class="project-overlay">
-				    	<h3>HCX Website</h3>
-				    	<h4 class="color-white">Web Design & Develop</h4>
-				    </div>			    	
-				</a> -->
-			    <a class="project-block" href="projects/nsysuhero.html" target="_blank">
-				   	<div class="project-small" id="nsysu">
-				    	<img class="project-size" src="projects/game_nsysuhero/nsysuhero-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
-			    	<div class="project-overlay">
-				    	<h3>NSYSU HERO</h3>
-				    	<h4 class="color-white">Game Design</h4>
-				    	<p>a 2-dimentional Unity game design</p>
-				    </div>
-				    </div>
-			    </a>
-			    <a class="project-block" href="art.html" target="_blank">
-				   	<div class="project-small">
-				    	<img class="project-size" src="art/art.jpg" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
-				    <div class="project-overlay">
-				    	<h3>ART</h3>
-				    	<h4 class="color-white">Designs and Illustrations</h4>
-				    	<p>not only UI/UX design</p>
-				    </div>
-				    </div>
-			    </a>		    
-			</div>
+		<div class="row-index">
+		    <a class="project-block" href="projects/steveai.html" target="_blank">
+			    <img src="img-index/steve.png" class="img-index">	    	
+				    <div class="project-title">Steve.ai</div>
+				    <div class="project-description">UI/UX Design for AI</div>
+				    <div class="project-year">2019</div>
+				    <div class="project-overlay"></div>
+			</a>
 		</div>
-		<div style="clear:both;"></div>
+
+		<div class="row-index">
+		    <a class="project-block" href="projects/dwb.html" target="_blank">
+			    <img src="img-index/dwb.png" class="img-index">	    	
+				    <div class="project-title">Drawing with Brushy</div>
+				    <div class="project-description">UI/UX Design for Children</div>
+				    <div class="project-year">2018</div>
+				    <div class="project-overlay"></div>
+			</a>
+		</div>
+
+		<div class="row-index">
+		    <a class="project-block" href="projects/designdiary.html" target="_blank">
+			    <img src="img-index/designdiary.png" class="img-index">	    	
+				    <div class="project-title">Design Diary</div>
+				    <div class="project-description">Medium Publication About UX</div>
+				    <div class="project-year">2018</div>
+				    <div class="project-overlay"></div>
+			</a>
+		</div>		
+
+		<div class="row-index">
+		    <a class="project-block" href="projects/spending.html" target="_blank">
+			    <img src="img-index/spending.png" class="img-index">	    	
+				    <div class="project-title">Spending Report</div>
+				    <div class="project-description">Data Visulization Interactive Report Design</div>
+				    <div class="project-year">2018</div>
+				    <div class="project-overlay"></div>
+			</a>
+		</div>
+
+		<div class="row-index">
+		    <a class="project-block" href="projects/krtco.html" target="_blank">
+			    <img src="img-index/krtco.png" class="img-index">	    	
+				    <div class="project-title">KRTCO Website</div>
+				    <div class="project-description">Web Design & Develop</div>
+				    <div class="project-year">2015</div>
+				    <div class="project-overlay"></div>
+			</a>
+		</div>
+
+		<div class="row-index">
+		    <a class="project-block" href="projects/nsysuhero.html" target="_blank">
+			    <img src="img-index/nsysuhero.png" class="img-index">	    	
+				    <div class="project-title">NSYSU Hero</div>
+				    <div class="project-description">Unity Game Design</div>
+				    <div class="project-year">2015</div>
+				    <div class="project-overlay"></div>
+			</a>
+		</div>
+
+		<div class="row-index">
+		    <a class="project-block" href="projects/art.html" target="_blank">
+			    <img src="img-index/art.png" class="img-index">	    	
+				    <div class="project-title">Art</div>
+				    <div class="project-description">Designs and Illustrations</div>
+				    <div class="project-overlay"></div>
+			</a>
+		</div>
+
+	</div>
+
+	<div style="clear:both;"></div>
 	</div>
 
 	<div class="parallax" id="about">
