--- a/projects/dwb.html
+++ b/projects/dwb.html
@@ -208,7 +208,7 @@
 			<div class="col-one">
 				<h6>WIREFRAME</h6>
 				<h5>The solution draft</h5>
-				<img src="dwb/wireframe.svg" alt="wireframe" class="img-col-one" data-aos="zoom-in" data-aos-once="true">
+				<img src="dwb/wireframe.svg" alt="wireframe" class="img-col-one">
 			</div>
 		</div>
  		
