--- a/projects/krtco.html
+++ b/projects/krtco.html
@@ -39,10 +39,10 @@
 		<a href="../index.html#work" class="a_nav"><span class="btn_nav light">WORK</span></a>	
 	</header>
 
-	<article class="intro parallax-project intro-krtco">
+	<article class="intro parallax-small intro-krtco">
 		<h1>KRTCO Website</h1>
 		<p>UI Design & Develop</p>
-		<img class="img-project-intro" src="web_krtco/krtco-intro.png" alt="" data-aos="zoom-in" data-aos-once="true">
+<!-- 		<img class="img-project-intro" src="web_krtco/krtco-intro.png" alt="" data-aos="zoom-in" data-aos-once="true"> -->
 	</article>
 
 	<div class="wrapper-project" id="wrapper">
