--- a/projects/dwb.html
+++ b/projects/dwb.html
@@ -52,7 +52,7 @@
 			</div>
 			<div class="col-two">
 			<h2>Overview</h2>
-				<p>Draw With Brushy is an educational game that teaches preschool children to learn about how to draw, practice hand-eye coordination movements, and communication through finger drawing on tablet devices.
+				<p>Draw With Brushy is an educational game that teaches preschool children (3-5 years) to learn about how to draw, practice hand-eye coordination movements, and communication through finger drawing on tablet devices.
 				</p>
 			</div>
 		</div>
@@ -123,7 +123,7 @@
 				<h6>LEARN FROM PEOPLE</h6>
 				<h5>Interview</h5>
 				<p>
-					The goal of this interview phase is to found out their child’s use of technology and their beliefs about how technology influences children. I interviewed the  girl’s mother. Some learnings from the interview:
+					The goal of this interview phase is to found out children’s use of technology and parents' beliefs about how technology influences children. I interviewed the  girl’s mother. Some learnings from the interview:
 					<div class="row">
 						<div class="col-intro-img">
 							<img src="artism/interview-0.jpg" alt="interview-0" class="img-intro">
@@ -155,10 +155,26 @@
 		</div>
 
 		<div class="row-project">
-			<div>
+			<div class="col-one">
+				<h6>RESEARCH FINDINGS</h6>
+				<h5>Using insights to support design</h5>
+				<p>I use the important findings and principles from research to support designs. Not only following the throries but also matching the real world user's needs.</p>
+				<img src="dwb/findings.png" alt="findings" class="img-col-one" class="col-one">	
+			</div>
+		</div>
+
+		<div class="row-project bg-dwb">
+			<div class="col-one">
+				<h6>IDEATION FRAME</h6>
+				<div class="hmw">" How might we provide a meaningful educational technology that is suitable for preschool children? "</div>
+			</div>
+		</div>
+
+		<div class="row-project">
+			<div class="col-one">
 				<h6>STORYBOARDING</h6>
 				<h5>The story of user</h5>				
-				<img src="dwb/storyboard.png" alt="storyboard" class="img-col-one" class="col-one" data-aos="zoom-in" data-aos-once="true">			
+				<img src="dwb/storyboard.png" alt="storyboard" class="img-col-one" class="col-one">			
 			</div>
 		</div>	
 
